# hpe_hackathon

./: .env-example  README.md  manage.py  pyproject.toml
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_article_author_alter_article_pub_date.py
articles/templates/articles/: index.html
home/: urls.py  views.py
home/templates/home/: about.html  contact.html  index.html
hpe_hackathon/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: admin.py  models.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_rename_question_question_problem_statement_and_more.py
quizzes/templates/quizzes/: index.html  quiz.html  results.html
templates/: base.html
videos/: admin.py  models.py  urls.py  views.py
videos/migrations/: 0001_initial.py
videos/templates/videos/: index.html
