[tool.poetry]
name = "hpe_hackathon"
version = "0.1.0"
description = "project for hpe hackathon 2022"
authors = ["Shakya Majumdar <shakyamajumdar1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
psycopg2 = "^2.9.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
django-stubs = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
